# quant-cover

./: .envrc.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  plan.md
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260403_0001_initial_core_tables.py  20260403_0002_add_sports_and_leagues.py  20260403_0003_add_teams_players_and_aliases.py  20260403_0004_add_games_and_player_game_stats.py
apps/api/src/quant_cover_api/: config.py  main.py
apps/api/src/quant_cover_api/api/: backtest_runs.py  dependencies.py  health.py  strategies.py  users.py
apps/api/src/quant_cover_api/api/schemas/: backtest_run.py  strategy.py  user.py
apps/api/src/quant_cover_api/cli/: __main__.py  main.py
apps/api/src/quant_cover_api/db/: __init__.py  session.py  types.py
apps/api/src/quant_cover_api/db/models/: __init__.py  backtest_run.py  game.py  league.py  player.py  player_alias.py  player_game_stat.py  sport.py  strategy.py  team.py  timestamps.py  user.py
apps/api/src/quant_cover_api/scraping/clients/: nba_api_client.py  nba_com.py  stathead.py
apps/api/src/quant_cover_api/scraping/fixtures/: nba_api_games_2026-04-02.json  nba_com_nba_teams.json  stathead_nba_teams.html
apps/api/src/quant_cover_api/scraping/parsers/: nba_api_boxscore.py  nba_api_games.py  nba_com_teams.py  teams.py
apps/api/src/quant_cover_api/services/: backtest_run_service.py  boxscore_sync_service.py  game_sync_service.py  player_resolution_service.py  strategy_service.py  sync_result.py  team_sync_service.py  user_service.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_health_api.py  test_workflow_api.py
apps/api/tests/unit/: test_backtest_run_service.py  test_nba_api_boxscore_parser.py  test_team_parsers.py  test_user_service.py
docs/: date-driven-scraping-plan.md  game-and-boxscore-ingestion-plan.md  ingestion-and-worker-plan.md  (+1 more)
(+1 files in other folders)
