[project]
name = "quant-cover-api"
version = "0.1.0"
description = "Quant Cover API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_cover_api"]
